# utility

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  TODO.md  config.h  git-build-gen.py  link.hpp  msvc10_build.bat  prefix.hpp  suffix.hpp  utility.hpp  utility.hpp.in  utility_0.3.1.md
cmake/: boost_style_naming.cmake  cmake_debug.cmake  cmake_utility.cmake  internal_util.cmake  library_regular_naming.cmake  utilityConfig.cmake
common/: CMakeLists.txt  acronym_for_pinyin.h  assert.hpp  bytedata.hpp  common_cfg.h  common_cfg.hpp  digest.hpp  encryption.h  encryption.hpp  math_util.h  math_util.hpp  scope.hpp  simple_lock.hpp  simple_semaphore.hpp  thread_interrupt.h  thread_interrupt.hpp  time_util.h  time_util.hpp  unit.h  unit.hpp  version.h
common/impl/: acronym_for_pinyin.ipp  base64.hpp  bytedata.ipp  common.cpp  encryption.ipp  gtest_float.hpp  math_util.ipp  thread_interrupt.ipp  time_util.ipp  unit.ipp  version.ipp
example/: CMakeLists.txt  simple.cpp
filesystem/: CMakeLists.txt  file_unix.h  file_unix.hpp  file_util.h  file_util.hpp  file_win.h  file_win.hpp  filesystem_cfg.h  filesystem_cfg.hpp  path_util.h  path_util.hpp
filesystem/impl/: file_unix.ipp  file_util.ipp  file_win.ipp  filesystem.cpp  path_util.ipp
include/: build.hpp.in  prefix.hpp  resource.rc.in  suffix.hpp
include/utility/: base.h  config.h  config.h.in  define.h.in  error.h  filepath.h  link.hpp  string.h  string_conv.h  string_util.h  utility.h
msinttypes/: inttypes.h  stdint.h
platform/: CMakeLists.txt  console_util.hpp  console_win.h  console_win.hpp  cpu.h  cpu.hpp  cpu_util.hpp  mini_dump.hpp  mini_dump_win.h  mini_dump_win.hpp  platform_cfg.h  platform_cfg.hpp  platform_error.h  platform_error.hpp  platform_unix.h  platform_unix.hpp  platform_util.h  platform_util.hpp  platform_win.h  platform_win.hpp  registry_util.hpp  registry_win.h  registry_win.hpp  service_util.hpp  service_win.h  service_win.hpp
platform/impl/: console_util.ipp  console_win.ipp  cpu.ipp  cpu_util.ipp  dbghelp_api.hpp  mini_dump.ipp  mini_dump_win.ipp  platform.cpp  platform_error.ipp  platform_unix.ipp  platform_util.ipp  platform_win.ipp  registry_util.ipp  registry_win.ipp  service_util.ipp  service_win.ipp
process/: CMakeLists.txt  process.h  process.hpp  process_cfg.h  process_cfg.hpp  process_native.hpp
process/impl/: process.cpp  process.ipp
src/: error.cpp  filepath_win.cpp  resource.rc.in  string_conv.cpp  string_conv_iconv.hpp  string_conv_posix.cpp  string_conv_win.cpp  string_util.cpp
string/: CMakeLists.txt  string_cfg.h  string_cfg.hpp  string_conv.h  string_conv.hpp  string_conv_easy.hpp  string_util.h  string_util.hpp  tstring.h  tstring.hpp
string/impl/: string.cpp  string_conv.ipp  string_conv_iconv.hpp  string_conv_linux.ipp  string_conv_unix.ipp  string_conv_win.ipp  string_util.ipp  tstring.ipp
test/: CMakeLists.txt  common.cpp  common_bytedata.cpp  common_encryption.cpp  common_math.cpp  common_unit.cpp  common_version.cpp  filesystem.cpp  filesystem_file.cpp  filesystem_path.cpp  mini_dump.cpp  platform_cpu.cpp  platform_registry.cpp  platform_util.cpp  process.cpp  string.cpp  string_util.cpp
unittest/: CMakeLists.txt  common.cpp  common_bytedata.cpp  common_encryption.cpp  common_math.cpp  common_unit.cpp  common_version.cpp  console_win.cpp  filesystem_file.cpp  filesystem_path.cpp  mini_dump.cpp  platform_cpu.cpp  platform_registry.cpp  platform_util.cpp  process.cpp  string.cpp  string_util.cpp
